split code into forwarding engine and connection manager
Change-Id: I3a3485e00e885c1f587907fd17e7b2e95e55c21d

--- a/shortcut-fe/Makefile
+++ b/shortcut-fe/Makefile
@@ -2,7 +2,12 @@
 # Makefile for Shortcut FE.
 #
 
-obj-$(CONFIG_SHORTCUT_FE) += shortcut-fe.o
+obj-m += shortcut-fe.o
+obj-m += shortcut-fe-cm.o
 
-shortcut-fe-y := \
+shortcut-fe-objs := \
 	sfe_ipv4.o
+
+shortcut-fe-cm-objs := \
+	sfe_cm.o
+
