--- a/shortcut-fe/Kconfig
+++ b/shortcut-fe/Kconfig
@@ -1,3 +1,7 @@
+# Copyright (c) 2013 Qualcomm Atheros, Inc.
+#
+# All Rights Reserved.
+# Qualcomm Atheros Confidential and Proprietary.
 #
 # Shortcut forwarding engine
 #
